# earthly-thurstech

./: Dockerfile  Earthfile  Makefile  README.md  docker-compose.env  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
compose/app/: Dockerfile  entrypoint.sh
example/core/: tests.py  views.py
example/example/: settings.py  urls.py
