[tool.poetry]
name = "earthly-thurstech"
version = "0.1.0"
description = ""
authors = ["Yothin Muangsommuk <m@yothinix.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
psycopg2-binary = "^2.9.3"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
